--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 /* ==========================================================================
    1. CSS Reset Code
    ========================================================================== */
@@ -104,14 +105,97 @@ li {
   margin: 0 auto;
 }
 /*=================================
-  Header styling starts here
+  Custom styling starts here
+=================================*/
+:root {
+  --left-slider: #22242E;
+  --right-slider: #56595F;
+  --lightgray-color: #C0C1C3;
+  --normal-heading: #404149;
+  --black-color: #000;
+  --white-color: #fff;
+  --send-button: #22242D;
+  --footer-color: #1F1F20;
+  --bottom-footer: #B4B5B5;
+  --footer-link: #4590B0;
+  --social-icon: #8C8C8C;
+  --input-color: #EBEBEB;
+}
+
+main { font-family: 'Roboto', sans-serif; }
+
+.display-none { display: none; }
+/*=================================
+  Custom styling ends here
 =================================*/
 
+/*=================================
+  Header styling starts here
+=================================*/
+header .wrapper {
+  width: 100%;
+  border-bottom: 1px solid var(--right-slider);
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1;
+}
 
+.header-box {
+  width: 90.88%;
+  margin: 0 auto;
+  padding: 30px 0 33px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.left-header {
+  margin-left: 4px;
+  display: flex;
+  align-items: center;
+}
 
+h1 { flex-basis: 40%; }
+.header-logo { font-size: 0; }
 
+.header-logo::after {
+  content: '';
+  margin: 0 15%;
+  padding: 15px 0.5px;
+  background-color: var(--right-slider);
+}
 
+.architect {
+  margin-left: 12.5%;
+  display: block;
+  color: var(--bottom-footer);
+  font-size: 15px;
+}
+
+.menu-item {
+  color: var(--white-color);
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.menu-list { padding-right: 22px; }
+.menu-list:first-child { padding-right: 8px; }
+.menu-list:last-child { padding: 0; }
+
+.menu-list:last-child a {
+  padding: 0;
+  font-weight: 100;
+  text-indent: -9999px;
+}
+
+.menu-list:last-child a::before {
+  content: '\f002';
+  font-family: 'FontAwesome';
+  float: right;
+  text-indent: 0;
+}
 /*=================================
   Header styling ends here
 =================================*/  
@@ -120,12 +204,163 @@ li {
   main styling starts here
 =================================*/
 
+/* banner section started here */
+.banner .wrapper { width: 100%; }
+.slider-images { display: flex; }
+.banner-box { position: relative; }
 
+.slider-content {
+  padding: 0 0 393px 4.5%;
+  flex-basis: 34%;
+  background-color: var(--left-slider);
+}
 
+.slider-images figure {
+  padding-right: 1.3%;
+  flex-basis: 61.5%;
+  background-color: var(--right-slider);
+}
 
+.slider-images img { height: 100%; }
 
+.headings {
+  color: var(--white-color);
+  font-size: 50px;
+  text-transform: uppercase;
+}
 
+.normal-heading {
+  margin-top: 354px;
+  font-weight: 100;
+  line-height: 1;
+  letter-spacing: 3px;
+}
 
+.bold-heading { font-weight: 900; }
+
+.letter-space {
+  padding-top: 14px;
+  display: block;
+  position: absolute;
+  color: var(--white-color);
+  font-size: 20px;
+  font-weight: 300;
+  letter-spacing: 45px;
+  text-transform: uppercase;
+}
+
+.slider-lines {
+  width: 18%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  left: 5%;
+  bottom: 100px;
+}
+
+.slides { flex-basis: 17%;}
+
+.line {
+  border-bottom: 1px solid var(--right-slider);
+  display: block;
+  font-size: 7px;
+  text-indent: -9999px;
+}
+
+.slide-active { background-color: var(--white-color); }
+/* banner section end here */
+
+/* why us section started here */
+.why-us .letter-space {
+  padding: 0 0 52px;
+  position: inherit;
+  color: var(--social-icon);
+  font-size: 16px;
+  letter-spacing: 33px;
+}
+
+.why-us .normal-heading {
+  margin: 0;
+  padding-top: 8px;
+  color: var(--black-color);
+}
+
+.why-us .bold-heading { color: var(--black-color); }
+
+.outter-box {
+  padding: 80px 0 64px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-content { flex-basis: 40%; }
+
+.right-content {
+  flex-basis: 48.4%;
+  position: relative;
+}
+
+.content {
+  margin-top: 34px;
+  color: var(--lightgray-color);
+  font-size: 18px;
+  line-height: 1.4;
+}
+
+.above-image {
+  width: 53%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  transform: translate(-100px, 88px);
+}
+/* why us section end here */
+
+/* ask question section start here */
+.ask-question {
+  margin-top: 258px;
+  text-align: center;
+}
+
+.ask-question .normal-heading {
+  margin: 0;
+  color: var(--black-color);
+}
+
+.ask-question .bold-heading { color: var(--black-color); }
+
+form {
+  width: 65.5%;
+  margin: 50px auto 10px;
+}
+
+.form-content {
+  width: 100%;
+  padding: 14px 0;
+  border: none;
+  border-bottom: 2px solid var(--input-color);
+  outline: none;
+  font-size: 16px;
+}
+
+.form-content::placeholder { color: var(--lightgray-color); }
+
+.form-group {
+  padding-bottom: 50px;
+}
+
+.send-button {
+  padding: 21px 8%;
+  border: none;
+  outline: none;
+  background-color: var(--send-button);
+  color: var(--white-color);
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+/* ask question section end here */
 
 /*=================================
   main styling ends here
@@ -134,12 +369,85 @@ li {
 /*=================================
   footer styling starts here
 =================================*/ 
+footer {
+  padding: 12px 0;
+  background-color: var(--footer-color);
+}
 
+.top-footer {
+  padding: 14px 0;
+  border-bottom: 1px solid var(--right-slider);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+h6 {
+  display: flex;
+  align-items: center;
+}
 
+.bottom-footer {
+  padding: 16px 0 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+h6 .header-logo { flex-basis: 40%; }
 
+h6 .header-logo::after {
+  content: '';
+  margin: 9px 1.6%;
+  padding: 15px 0.5px;
+  position: absolute;
+  background-color: var(--right-slider);
+}
 
+h6 .architect { margin-top: 10px; }
+
+.nav-footer {
+  display: flex;
+  align-items: center;
+}
+
+.footer-menu { padding-left: 26px; }
+
+.footer-menu a {
+  color: var(--social-icon);
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.footer-menu .nav-active { color: var(--white-color); }
+
+.bottom-footer p {
+  color: var(--social-icon);
+  font-size: 14px;
+}
+
+p a {
+  color: var(--footer-link);
+  font-size: 15px;
+}
+
+.social-links { flex-basis: 8%; }
+.social-icon { padding-left: 14%; }
+
+.icon {
+  color: var(--social-icon);
+  text-indent: -9999px;
+}
+
+.icon::before {
+  font-family: 'FontAwesome';
+  float: right;
+  text-indent: 0;
+}
+
+.social-icon:nth-child(1) .icon::before { content: '\f082';}
+.social-icon:nth-child(2) .icon::before { content: '\f099';}
+.social-icon:nth-child(3) .icon::before { content: '\f16d';}
 
  /*=================================
   footer styling ends here
