--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,8 @@ sub { bottom: -.25em; }
 
 /*for all*/
 body {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   font-family: sans-serif;
 }
 
@@ -136,7 +137,7 @@ Header styling starts here
 .menu-list { padding-right: 21px; }
 .menu-list:first-child { padding-right: 10px; }
 .menu-list:last-child { padding: 0; }
-h1 { flex-basis: 42%; }
+h1 { -ms-flex-preferred-size: 42%; flex-basis: 42%; }
 .header-logo { font-size: 0; }
 
 header .wrapper {
@@ -144,7 +145,9 @@ header .wrapper {
   border-bottom: 1px solid var(--header-border);
   position: absolute;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
   z-index: 1;
 }
 
@@ -152,14 +155,24 @@ header .wrapper {
   width: 90%;
   margin: 0 auto;
   padding: 32px 0 33px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .left-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .header-logo::after {
@@ -205,26 +218,29 @@ header .wrapper {
 
 /* banner section started here */
 .banner .wrapper { width: 100%; }
-.slider-images { display: flex; }
+.slider-images { display: -webkit-box; display: -ms-flexbox; display: flex; }
 .banner-box { position: relative; }
-.slides { flex-basis: 17%;}
+.slides { -ms-flex-preferred-size: 17%; flex-basis: 17%;}
 .slide-active { background-color: var(--white-color); }
 .bold-heading { font-weight: 900; }
 
 .slider-content {
   padding: 0 0 412px 4.5%;
-  flex-basis: 34%;
+  -ms-flex-preferred-size: 34%;
+      flex-basis: 34%;
   background-color: var(--left-slider);
 }
 
 .slider-images figure {
   padding-right: 1.3%;
-  flex-basis: 61.5%;
+  -ms-flex-preferred-size: 61.5%;
+      flex-basis: 61.5%;
   background-color: var(--right-slider);
 }
 
 .slider-images img {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   height: 100%;
 }
 
@@ -254,8 +270,12 @@ header .wrapper {
 
 .slider-lines {
   width: 18%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   position: absolute;
   left: 5%;
   bottom: 104px;
@@ -271,7 +291,7 @@ header .wrapper {
 
 /* why us section started here */
 .why-us .bold-heading { color: var(--black-color); }
-.left-content { flex-basis: 39%; }
+.left-content { -ms-flex-preferred-size: 39%; flex-basis: 39%; }
 
 .why-us .letter-space {
   padding: 0 0 52px;
@@ -291,13 +311,18 @@ header .wrapper {
 
 .outter-box {
   padding: 82px 0 64px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .right-content {
   margin-top: 4px;
-  flex-basis: 49%;
+  -ms-flex-preferred-size: 49%;
+      flex-basis: 49%;
   position: relative;
 }
 
@@ -313,7 +338,9 @@ header .wrapper {
   position: absolute;
   left: 0;
   bottom: 0;
-  transform: translate(-100px, 90px);
+  -webkit-transform: translate(-100px, 90px);
+      -ms-transform: translate(-100px, 90px);
+          transform: translate(-100px, 90px);
 }
 /* why us section end here */
 
@@ -321,6 +348,10 @@ header .wrapper {
 .ask-question { margin-top: 272px; }
 .ask-question .headings { text-align: center; }
 .ask-question .bold-heading { color: var(--black-color); }
+.form-content::-webkit-input-placeholder { color: var(--lightgray-color); }
+.form-content::-moz-placeholder { color: var(--lightgray-color); }
+.form-content:-ms-input-placeholder { color: var(--lightgray-color); }
+.form-content::-ms-input-placeholder { color: var(--lightgray-color); }
 .form-content::placeholder { color: var(--lightgray-color); }
 .form-group { padding-bottom: 54px; }
 .form-group:nth-child(3) { padding-bottom: 46px; }
@@ -356,10 +387,11 @@ form {
   text-transform: uppercase;
   margin-left: 50%;
   display: block;
-  transform: translateX(-54%);
+  -webkit-transform: translateX(-54%);
+      -ms-transform: translateX(-54%);
+          transform: translateX(-54%);
 }
 /* ask question section end here */
-
 /*=================================
   main styling ends here
 =================================*/
@@ -375,24 +407,40 @@ footer {
 .top-footer {
   padding: 18px 0 12px;
   border-bottom: 1px solid var(--right-slider);
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 h6 {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .bottom-footer {
   padding: 17px 0 12px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-h6 .header-logo { flex-basis: 40%; }
+h6 .header-logo { -ms-flex-preferred-size: 40%; flex-basis: 40%; }
 
 h6 .header-logo::after {
   content: '';
@@ -405,8 +453,12 @@ h6 .header-logo::after {
 h6 .architect { margin: 10px 0 0 14.5%; }
 
 .nav-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer-menu { padding-left: 24px; }
@@ -429,7 +481,17 @@ p a {
   font-size: 16px;
 }
 
-.social-links { flex-basis: 7.3%; }
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -ms-flex-preferred-size: 13%;
+      flex-basis: 13%;
+}
+
 .social-icon { padding-left: 14%; }
 
 .icon {
@@ -466,15 +528,25 @@ p a {
 @media only screen and (max-width: 768px) {
   /* header section starts here */
   .menu-list { display: none; }
-  .search { display: block; }
   .header-box { padding: 14px 0; }
   .header-logo::after { display: none; }
-  .left-header { flex-direction: column; }
+  .left-header { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
   header .wrapper { background-color: var(--black-color); }
-
+  h1 { z-index: 1; }
+  .headings { font-size: 36px; }
+  .search { display: block; }
+  .nav-menu:hover .menu-list { display: block; }
+  
+  .letter-space {
+    font-size: 14px;
+    letter-spacing: 24px;
+  }
+  
   .left-header {
     margin-left: 30%;
-    justify-content: flex-end;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
 
   .left-header .architect {
@@ -482,7 +554,6 @@ p a {
     top: 98px;
     margin: 0;
   }
-
 
   header .wrapper {
     position: absolute;
@@ -506,52 +577,67 @@ p a {
     float: left;
     text-indent: 0;
   }
-
-  .hamburger:hover + .nav-menu > .menu-list {
-    display: block;
-  }
-
-  .nav-menu {
-    position: absolute;
-    left: 0;
-    text-align: center;
-    background-color: #000;
+  
+  .right-nav:hover .nav-menu {
     width: 100%;
-    line-height: 2;
-    padding: 23px 0;
-    margin-top: 40px;
+    padding-top: 80px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: var(--black-color);
+    text-align: center;
   }
-  /* header section ends here */
+  
+  .nav-menu {
+    width: 10%;
+    margin-top: 40px;
+    padding: 23px 0;
+    position: absolute;
+    top: 0;
+    right: 6%;
+    line-height: 2;
+    text-align: center;
+  }
+  
+  .search {
+    position: absolute;
+    top: 0;
+    right: 6%;
+    /* header section ends here */
+  }
 
   /* banner section starts here */
+  .slider-content { padding: 0 0 250px 4.5%; }
+  .slider-lines { width: 30%; }
+  .right-content { text-align: center; }
+  .ask-question { margin: 0; }
+  .social-links { -ms-flex-preferred-size: 16%; flex-basis: 16%; }
+  .social-icon { padding-left: 6px; }
+
   .banner .wrapper {
     width: 100%;
     padding-top: 170px;
     background-color: var(--footer-color);
   }
-
-  .slider-content { padding: 0 0 250px 4.5%; }
-
-  .slider-lines {
-    width: 30%;
-  }
-
+  
   .outter-box {
     padding: 50px 0 64px;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
-
-  .right-content { text-align: center; }
-  .ask-question { margin: 0; }
-  .social-links { flex-basis: 13%; }
-
+  
   .above-image {
     margin-top: 25px;
     position: inherit;
-    transform: translate(0);
+    -webkit-transform: translate(0);
+        -ms-transform: translate(0);
+            transform: translate(0);
   }
   /* banner section ends here */
 } 
+/*media query for 768px ends here*/
 
 /*media query for 540px starts here*/
 @media only screen and (max-width: 540px) {
@@ -559,30 +645,35 @@ p a {
   .form-group { padding-bottom: 10px; }
   .social-links { margin-top: 10px; }
   .left-header { margin-left: 24%; }
-  .bottom-footer { flex-direction: column; }
-  .social-icon { padding: 0; }
-  .top-footer { flex-direction: column; }
+  .bottom-footer { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
+  .social-icon { padding: 0 8%; }
+  .top-footer { -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; }
   .footer-menu { padding: 0 10px; }
   h6 .architect { margin: 10px; }
   .slider-lines { bottom: 50px; }
   .slider-content h2 { top: 30px; }
   .slider-content h3 { top: 70px; }
+  .header-logo { width: 86%; }
 
   h6 {
     width: 50%;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   .slider-content .letter-space {
     top: 126px;
     padding: 0;
-    letter-spacing: 32px;
     font-size: 18px;
+    letter-spacing: 24px;
   }
 
   .slider-content .headings {
-    position: absolute;
     margin: 0;
+    position: absolute;
     font-size: 40px;
   }
 }
+/*media query for 540px ends here*/
